# wraith-scanner

./: .env.example  .gitignore  Full_future_plan.md  README.md  TODO.md  api_server.py  future_plan.md  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  test.db
.github/workflows/: python-ci.yml
desktop/: README.md  __init__.py  wraith_desktop.py
desktop/pyinstaller/: wraith_desktop.spec
docs/: ENTERPRISE_UPGRADE_PLAN.md  PHASE1_HARDENING.md  PHASE2_MANUAL_WORKBENCH.md
docs/api/: openapi.yaml
scanner-terminal/: .gitignore  README.md  package-lock.json  package.json
scanner-terminal/src/: App.css  App.js  App.test.js  theme.js
scanner/core/: __init__.py  async_engine.py  authorization_matrix.py  crawler.py  deep_state.py  live_scan.py  models.py  sequence_runner.py  (+1 more)
scripts/: build_desktop.ps1  run_dev.ps1  setup_dev.ps1  test_all.ps1
test_app/: vulnerable_app.py
tests/: test_advanced_engine_upgrades.py  test_api_discovery_and_json_scanning.py  test_api_importers.py  test_auth_and_crawler.py  test_auth_profiles.py  test_authorization_matrix.py  test_browser_launcher.py  test_canonical_storage.py  test_corpus_api.py  test_cve_intel.py  test_desktop_launcher.py  test_graphql_scanner.py  test_live_scan_and_workflows.py  test_manual_certificates.py  test_manual_passive.py  test_manual_proxy.py  test_nuclei_adapter.py  test_pdf_report_nuclei_cve.py  test_proof_mode.py  test_race_scanner.py  test_sast_dependency_parsers.py  test_sast_secret_detection.py  test_security_regressions.py  test_semgrep_custom_rules.py  test_semgrep_fixture_scans.py  test_sequence_runner.py  test_startup_smoke.py  test_template_trust.py  test_websocket_scanner.py
(+111 files in other folders)
