[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wraith-scanner"
version = "4.0.0"
description = "Async DAST and SAST scanner with deep-state SPA discovery, evidence storage, and proof workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Harsh Raj" }]
license = { text = "MIT" }
keywords = ["security", "appsec", "dast", "sast", "vulnerability-scanner", "burp-suite"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.28.0",
  "beautifulsoup4>=4.11.0",
  "reportlab>=3.6.0",
  "colorama>=0.4.6",
  "flask>=2.3.0",
  "flask-cors>=4.0.0",
  "flask-socketio>=5.3.0",
  "playwright>=1.40.0",
  "aiohttp>=3.9.0",
  "semgrep>=1.0.0",
  "websockets>=12.0",
  "esprima>=4.0.1",
  "openai>=1.40.0",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/harshraj211/wraith-scanner"
Repository = "https://github.com/harshraj211/wraith-scanner.git"
Issues = "https://github.com/harshraj211/wraith-scanner/issues"

[project.scripts]
wraith = "main:main"
wraith-scan = "main:main"

[tool.setuptools]
packages = { find = { include = ["scanner*"] } }
py-modules = ["main", "api_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
